--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
         <p>Groom's reputation</p>
         <input type="checkbox" class="gossips" name="gossips1" value=0.85>
-        <label for="gossips1"> Gossips about his parent's attitude</label><br>
+        <label for="gossips1">Gossips about his parent's attitude</label><br>
         <input type="checkbox" class="gossips" name="gossips2" value=0.9>
         <label for="gossips2">Gossips about his character</label><br>
         <input type="checkbox" class="gossips" name="gossips3" value=200>
         <label for="gossips3">General gossips around his person</label><br>
-        <button onclick="calculator()">Show</button>
-        <h1 id="output">Result</h1>
+        <button onclick="calculator()">Calculate Kalyn Mal</button>
     </div>
 </body>
 
 </html>
+
